flux/tools/fizzy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fizzy
  namespace: tools
  labels:
    app: fizzy
spec:
  ports:
    - protocol: TCP
      name: fizzy
      port: 80
  selector:
    app: fizzy
